# sql2mermaid

./: LICENSE  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: python-tox.yml
sql2mermaid/: __init__.py  dependencies.py  main.py  tables.py  utils.py
tests/: test_sql2mermaid.py
tests/complex_with_subquery_case/: expected.txt  query.sql
tests/dotted_table_case/: expected.txt  query.sql
tests/multi_statement_case/: expected.txt  query.sql
tests/nested_with_case/: expected.txt  query.sql
tests/with_in_select_case/: expected.txt  query.sql
