[tool.poetry]
name = "sql2mermaid"
version = "2.0.0"
description = "Convert SQL table dependencies to mermaid.js"
authors = ["nkato <naokato.aq@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nkato/sql2mermaid"

[tool.poetry.dependencies]
python = "^3.9.0"
sqlparse = "^0.4.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
pyproject-flake8 = "^6.0.0.post1"
black = "^23.3.0"
isort = "^5.12.0"
tox = "^4.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.flake8]
ignore = "E203,"
max-line-length = 128
max-complexity = 18
exclude = ".venv,.tox,.mypy_cache,.git,__pycache__"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_site_packages = true
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"
line_length = 128
